@@ -1,3 +1,15 @@
+2009-12-02  Hidehisa Akiyama  <akky@users.sourceforge.jp>
+
+	* src/field_canvas.cpp:
+	* src/field_canvas.h:
+	* src/log_player.cpp:
+	* src/log_player.h:
+	* src/main_window.cpp:
+	* src/main_window.h:
+	* src/options.cpp:
+	* src/options.h:
+	- added an animation that shows recovering status.
+
 2009-12-01  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
 	* src/log_player.cpp:
